user input completed
- user can click on options
- answer circle will update with colour chosen by user
- move onto next answer circle and wait for next click

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Welcome to Color Pop! blahblahblah instructions here</h2>
 
     <div id="question">
+      <h3>Remember these colours!</h3>
       <span class="circle" id="oneQ"></span>
       <span class="circle" id="twoQ"></span>
       <span class="circle" id="threeQ"></span>
@@ -24,9 +25,12 @@
       <span class="circle" id="tenQ"></span>
     </div>
 
-    <div id="timer"></div>
+    <div id="timer">
+      <h3>Timer below here</h3>
+    </div>
 
     <div id="userInput">
+      <h3>Your Answers</h3>
       <span class="circle" id="oneA"></span>
       <span class="circle" id="twoA"></span>
       <span class="circle" id="threeA"></span>
@@ -40,6 +44,7 @@
     </div>
 
     <div id="colorPalette">
+      <h3>Click your option below!</h3>
       <span class="circle" id="oneOption"></span>
       <span class="circle" id="twoOption"></span>
       <span class="circle" id="threeOption"></span>
