--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="timer">
-      <h3>Timer below here</h3>
+      <h3 id="countdown">60</h3>
     </div>
 
     <div id="userInput">
