added start button and updated score function
- start button starts the countdown timer
- score will now be printed below start button after countdown timer hits 0 on webpage instead of console.log

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <h3 id="countdown">60</h3>
     </div>
 
+    <button id="startButton">START!</button>
+
+    <div id="score"></div>
+
     <div id="userInput">
       <h3>Your Answers</h3>
       <span class="circle" id="oneA"></span>
