--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <h1>Colour Pop</h1>
-    <h2>Welcome to Color Pop! blahblahblah instructions here</h2>
+    <h2>Welcome to Color Pop!</h2>
+    <p>blahblahblah game instructions here</p>
 
     <div id="question">
       <h3>Remember these colours!</h3>
