added in random number for question

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <p>blahblahblah game instructions here</p>
 
       <div id="question">
-        <h3>Remember these colours!</h3>
+        <h3>Remember them!</h3>
+        <h3 id="randomNumber"></h3>
         <span class="circle" id="oneQ"></span>
         <span class="circle" id="twoQ"></span>
         <span class="circle" id="threeQ"></span>
