--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 
       <div id="score"></div>
 
-      <div id="userInput">
+      <div id="answers">
         <h3>Your Answers</h3>
+        <h3 id="numAnswer"></h3>
         <span class="circle" id="oneA"></span>
         <span class="circle" id="twoA"></span>
         <span class="circle" id="threeA"></span>
@@ -51,7 +52,16 @@
       </div>
 
       <div id="colorPalette">
-        <h3>Click your option below!</h3>
+        <h3>Choose your option and enter your number below!</h3>
+        <input
+          type="number"
+          id="userNumInput"
+          placeholder="0"
+          min="0"
+          max="999"
+        />
+        <br />
+        <br />
         <span class="circle" id="oneOption"></span>
         <span class="circle" id="twoOption"></span>
         <span class="circle" id="threeOption"></span>
