changed fonts and colours

--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Yatra+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/style.css" />
     <title>Colour Pop</title>
   </head>
   <body>
     <div id="gameStart">
       <h1>Colour Pop</h1>
-      <h2>Welcome to Color Pop!</h2>
-      <p>blahblahblah game instructions here</p>
+      <header>
+        <h2>Welcome to Color Pop!</h2>
+        <p>blahblahblah game instructions here</p>
+      </header>
 
       <div id="question">
         <h3>Remember them!</h3>
@@ -32,8 +40,10 @@
       </div>
 
       <button id="startButton">REVEAL!</button>
+      <br />
 
       <div id="score"></div>
+      <br />
 
       <div id="answers">
         <h3>Your Answers</h3>
@@ -48,6 +58,7 @@
         <span class="circle" id="nineA"></span>
         <span class="circle" id="tenA"></span>
       </div>
+      <br />
 
       <div id="colorPalette">
         <h3>Choose your option and enter your number below!</h3>
@@ -57,7 +68,6 @@
         <span class="circle" id="fourOption"></span>
         <span class="circle" id="fiveOption"></span>
         <span class="circle" id="sixOption"></span>
-        <br />
         <br />
         <span>Type your number and press enter:</span>
         <input
