--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="contentMiddleTop">
         <h1>Colour Pop</h1>
         <header>
-          <h2>Welcome to Color Pop!</h2>
+          <h2>Welcome to Colour Pop!</h2>
           <p>
             You have 30s to remember the colours and numbers that appear <br />
             and another 30s to send in your answer!
@@ -54,8 +54,14 @@
 
       <div id="contentMiddleLower">
         <div id="answers">
-          <h3>Your Answers</h3>
-          <span class="circle" id="oneA">-</span>
+          <h4>Your Answers</h4>
+          <span
+            class="circle dropzone"
+            id="oneA"
+            ondragover="onDragOver(event)"
+            ondrop="onDrop(event)"
+            >-</span
+          >
           <span class="circle" id="twoA">-</span>
           <span class="circle" id="threeA">-</span>
           <span class="circle" id="fourA">-</span>
@@ -69,8 +75,13 @@
         <br />
 
         <div id="colorPalette">
-          <h3>Choose your option and enter your number below!</h3>
-          <span class="circle" id="oneOption"></span>
+          <h4>Choose your option and enter your number below!</h4>
+          <span
+            class="circle draggable"
+            id="oneOption"
+            draggable="true"
+            ondragstart="onDragStart(event)"
+          ></span>
           <span class="circle" id="twoOption"></span>
           <span class="circle" id="threeOption"></span>
           <span class="circle" id="fourOption"></span>
