added drag/drop for all option and answer circles

--- a/index.html
+++ b/index.html
@@ -55,13 +55,7 @@
       <div id="contentMiddleLower">
         <div id="answers">
           <h4>Your Answers</h4>
-          <span
-            class="circle dropzone"
-            id="oneA"
-            ondragover="onDragOver(event)"
-            ondrop="onDrop(event)"
-            >-</span
-          >
+          <span class="circle" id="oneA">-</span>
           <span class="circle" id="twoA">-</span>
           <span class="circle" id="threeA">-</span>
           <span class="circle" id="fourA">-</span>
@@ -76,12 +70,7 @@
 
         <div id="colorPalette">
           <h4>Choose your option and enter your number below!</h4>
-          <span
-            class="circle draggable"
-            id="oneOption"
-            draggable="true"
-            ondragstart="onDragStart(event)"
-          ></span>
+          <span class="circle" id="oneOption"></span>
           <span class="circle" id="twoOption"></span>
           <span class="circle" id="threeOption"></span>
           <span class="circle" id="fourOption"></span>
