edited input field to limit user's input to 3 characters only

--- a/index.html
+++ b/index.html
@@ -79,12 +79,11 @@
           <br />
           <span>Type your number and press enter:</span>
           <input
-            type="number"
+            type="string"
             id="userNumInput"
-            min="0"
             placeholder="0"
-            max="999"
             maxlength="3"
+            size="3"
           />
         </div>
       </div>
