minor html edits

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <div id="gameStart">
       <div id="contentMiddleTop">
-        <h1>Colour Pop</h1>
+        <h1>Colour-Pop</h1>
         <header>
-          <h2>Welcome to Colour Pop!</h2>
+          <h2>Welcome!</h2>
           <p>
             You have 30s to remember the colours and numbers that appear <br />
             and another 30s to send in your answer!
@@ -69,7 +69,7 @@
         <br />
 
         <div id="colorPalette">
-          <h4>Choose your option and enter your number below!</h4>
+          <h4>Choose your answer below!</h4>
           <span class="circle" id="oneOption"></span>
           <span class="circle" id="twoOption"></span>
           <span class="circle" id="threeOption"></span>
