--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Yatra+One&display=swap"
       rel="stylesheet"
     />
-    <title>Colour Pop</title>
+    <title>Colour-Pop</title>
   </head>
   <body>
     <div id="gameStart">
       <div id="contentMiddleTop">
-        <h1>Colour Pop</h1>
+        <h1>Colour-Pop</h1>
         <header>
-          <h2>Welcome to Color Pop!</h2>
+          <h2>Welcome!</h2>
           <p>
             You have 30s to remember the colours and numbers that appear <br />
             and another 30s to send in your answer!
@@ -69,7 +69,7 @@
         <br />
 
         <div id="colorPalette">
-          <h3>Choose your option and enter your number below!</h3>
+          <h3>Choose your answer below!</h3>
           <span class="circle" id="oneOption"></span>
           <span class="circle" id="twoOption"></span>
           <span class="circle" id="threeOption"></span>
