--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <br />
 
         <div id="colorPalette">
-          <h3>Choose your answer below!</h3>
+          <h3>Choose your colours below!</h3>
           <span class="circle" id="oneOption"></span>
           <span class="circle" id="twoOption"></span>
           <span class="circle" id="threeOption"></span>
