re-added drag/drop and edited input field to limit user's input to 3 digits

--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
           <br />
           <span>Type your number and press enter:</span>
           <input
-            type="number"
+            type="string"
             id="userNumInput"
-            min="0"
             placeholder="0"
-            max="999"
+            size="3"
             maxlength="3"
           />
         </div>
